# btor-analyzer

./: CMakeLists.txt
cmake/: FindAiger.cmake  FindBtor.cmake  FindMuser2.cmake
src/: CMakeLists.txt  aigUtils.h  get_metadata.h  main.cpp  mdf.btor2  metadata.cpp  metadata.h  out.aig  out_ascii.aig
